fixed mobile responsive, aligned navbar

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-  font-size: 12.5rem!important;
+  font-size: 8rem!important;
   font-family: Helvetica;
 }
 
@@ -282,6 +282,10 @@ span>a, .navbar-left{
   text-decoration: none;
 }
 
+.button:hover{
+  text-decoration: none;
+}
+
 .download-button{
   margin-left: auto;
 }
@@ -317,15 +321,17 @@ span>a, .navbar-left{
 }
 
 
+.body-link{
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+  text-transform: uppercase;
+  transition: all 5s ease-in ease-out;
+}
 
+.body-link:hover{
+  text-decoration: none;
+  color: rgba(222,255,147,1);
+}
 /*- - - - - - - - - - - - - - - ALL THESE DEVICES WOMAN*/
-
-
-@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
-@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
-@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
-@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
-@media (min-width:1281px) { /* hi-res laptops and desktops */ }
-
 
